--- a/css/style.css
+++ b/css/style.css
@@ -364,3 +364,26 @@ footer {
     font-weight: 800
 ;
 }
+.support_button_container {
+    display: flex;
+    place-content: flex-end;
+    place-items: center;
+    width: 100%;
+    height: 50px;
+    position: fixed;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    margin-bottom: 10px;
+}
+.support_button {
+    border-radius: 50%;
+    border: none;
+    background: var(--violet);
+    color: var(--white);
+    width: 50px;
+    height: 50px;
+    font-weight: 800;
+    font-size: 30px;
+    margin-right: 10px;
+}
