increased font size of the letters

--- a/css/style.css
+++ b/css/style.css
@@ -397,3 +397,11 @@ footer {
         display: none;
     }
 }
+@media (min-width: 570px) {
+    .card_description {
+        font-size: 18px;
+    }
+    .support_info {
+        font-size: 16px;
+    }
+}
