--- a/css/style.css
+++ b/css/style.css
@@ -405,3 +405,39 @@ footer {
         font-size: 16px;
     }
 }
+
+@media (min-width: 770px) {
+    .ad_website {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 200px 1fr;
+    }
+    .email_marketing, .digital_products, .blogging {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr;
+    }
+    .example_img {
+        grid-column: 2 / 2;
+        grid-row: 2 / 2;
+    }
+    .text_container_phone {
+        grid-column: 1 / 3;
+        grid-row: 1 / 1;
+        margin-top: 20px;
+    }
+    .website_builder {
+        grid-column: 1 / 1;
+        grid-row: 2 / 2;
+    }
+    .support_card_container {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        gap: 0 20px;
+    }
+    .podia_card {
+        grid-row: 2 / 2;
+        grid-column: 1 / 4;
+    }
+}
